remove any visible pricing stuff -- even with the big warning this could be misconstrued

--- a/salvus/static/policies/pricing.html
+++ b/salvus/static/policies/pricing.html
@@ -17,7 +17,7 @@
                 <h1>
                     <a href="http://www.sagemath.com" target="_blank">SageMath, Inc.</a></h1>
                 <h2>
-                    SageMath, Inc. Pricing (April 3, 2015)
+                    SageMath, Inc. Pricing (April 15, 2015)
                 </h2>
                 <a class="btn btn-default" href="index.html" role="button">&laquo; Other Policies</a>
             </div>
@@ -36,162 +36,165 @@
                         published by leading financial institutions.
                     </p>
 
-                    <h1>
-                        Plan types
-                    </h1>
+                    <div class="hide">
+                        <h1>
+                            Plan types
+                        </h1>
 
 
-                    <strong>Warning:</strong> <font color=#a80000>The following prices are <em><strong>very preliminary</strong></em> and <em><strong>no product</strong></em> is currently available for purchase.</font>
-                    <br>
-                    <br>
-                    <div class="row">
-                        <div class="col-md-5">
-                            SMC grows with you! The following upgrade allow you to increase the
-                            <em><strong>storage space</strong></em> for your files, the <em><strong>computational power and memory</strong></em> for
-                            your calculations, give your project
-                            <em><strong>network access</strong></em>,
-                            and <strong><em>remove restrictions</em></strong> on non-commercial/non-academic use.
+                        <strong>Warning:</strong> <font color=#a80000>The following prices are <em><strong>very preliminary</strong></em> and <em><strong>no product</strong></em> is currently available for purchase.</font>
+                        <br>
+                        <br>
+                        <div class="row">
+                            <div class="col-md-5">
+                                SMC grows with you! The following upgrade allow you to increase the
+                                <em><strong>storage space</strong></em> for your files, the <em><strong>computational power and memory</strong></em> for
+                                your calculations, give your project
+                                <em><strong>network access</strong></em>,
+                                and <strong><em>remove restrictions</em></strong> on non-commercial/non-academic use.
+                            </div>
+                            <div class="col-md-5 col-sm-offset-2">
+                                By upgrading one of your projects to a paid monthly plan, your files
+                                are copied to faster computers that are reserved only for pay projects,
+                                and you can start working right away.  If you
+                                cancel your plan<sup>8</sup>, your files move back to slower free-1 machines.
+                                In any case, you do not lose your data and
+                                we regularly snapshot and backup your files across multiple data
+                                centers.
+                            </div>
                         </div>
-                        <div class="col-md-5 col-sm-offset-2">
-                            By upgrading one of your projects to a paid monthly plan, your files
-                            are copied to faster computers that are reserved only for pay projects,
-                            and you can start working right away.  If you
-                            cancel your plan<sup>8</sup>, your files move back to slower free-1 machines.
-                            In any case, you do not lose your data and
-                            we regularly snapshot and backup your files across multiple data
-                            centers.
+
+                        <br><br>
+
+                        <div class="panel panel-default hide">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">Pricing for each plan</h3>
+                            </div>
+
+                            <div class="panel-body">
+
+                                <table class="table table-bordered table-hover">
+                                    <tr>
+                                        <th>Price</th>
+                                        <th style="width:10em">Project type</th>
+                                        <th>Commercial use<sup>1</sup></th>
+                                        <th>Network access<sup>2</sup></th>
+                                        <th>Idle timeout<sup>3</sup></th>
+                                        <th>Disk space<sup>4</sup></th>
+                                        <th>CPU<sup>5</sup></th>
+                                        <th>Memory<sup>6</sup></th>
+                                        <th class="hide">Backup interval<sup>7</sup></th>
+                                    </tr>
+                                    <tr>
+                                        <td colspan=9>
+                                        </td>
+                                    </tr>
+                                    <tr class="success">
+                                        <td colspan=9>
+                                            A <strong>standard</strong>
+                                            project runs
+                                            <em><strong>much more quickly</strong></em>,
+                                            and you may use it
+                                            commercially.
+                                        </td>
+                                    </tr>
+                                    <tr class="success">
+                                        <td style="padding-top: 0px;"><font size=5><strong>$10/month</strong></font></td>
+                                        <td>standard-1</td>
+                                        <td>Yes</td>
+                                        <td>Yes</td>
+                                        <td>1 day</td>
+                                        <td>5GB SSD</td>
+                                        <td>1 Intel Xeon</td>
+                                        <td>2GB RAM</td>
+                                        <td class="hide">10 minutes</td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan=9>
+                                        </td>
+                                    </tr>
+                                    <tr class="warning">
+                                        <td colspan=9>
+                                            A <strong>free</strong> project lets you evaluate the service and use
+                                            it for academic or non-commercial purposes.</td>
+                                    </tr>
+                                    <tr class="warning">
+                                        <td  style="padding-top: 0px;"><font size=5><strong>$0/month</strong></font></td>
+                                        <td>free-1</td>
+                                        <td>No</td>
+                                        <td>No</td>
+                                        <td>1 hour</td>
+                                        <td>3GB SSD</td>
+                                        <td>1 Opteron</td>
+                                        <td>2GB RAM</td>
+                                        <td class="hide">10 minutes</td>
+                                    </tr>
+                                    <tr class="info hide">
+                                        <td colspan=9>
+                                            A <strong>dedicated</strong>
+                                            project allow you to run  any
+                                            number of your projects
+                                            on a machine dedicated only
+                                            to them.
+                                        </td>
+                                    </tr>
+
+                                </table>
+
+
+                                <ol style="color: #444;">
+                                    <li><strong>Commercial use:</strong> free-1 projects may only be used for academic and non-commercial use.</li>
+
+                                    <li><strong>Network access:</strong>
+                                        Access from your project to the outside Internet, so you can pull files from external data sources easily.
+                                    </li>
+                                    <li><b>Idle timeout:</b>
+                                        Your project will stop running if no files are edited for this amount of time.
+                                        The project could also stop if the underlying machine crashes due to excessive use,
+                                        or the machine is rebooted for maintenance.
+                                    </li>
+                                    <li><b>Disk space:</b>
+                                        The total mount of disk space that your project may use.  This does not count snapshots and other backups.
+                                    </li>
+                                    <li><b>Speed:</b>
+                                        The Opteron processors are significantly slower than the Xeon's (often a factor of 2).  Shared processors may be shared
+                                        with other users, so you are not guaranteed to always get the full speed.
+
+
+                                    </li>
+                                    <li><b>Memory:</b>
+                                        The total amount of memory (RAM) that your project may use.  Shared memory is shared
+                                        with other users, so you are not guaranteed to always get the full amount
+                                        of memory.
+                                    </li>
+                                    <li  class="hide"><b>Backups:</b>
+                                        Browsable snapshots of all files in your project are saved periodically.
+                                    </li>
+
+                                </ol>
+                            </div>
+
+                            <div class="panel-footer hide">
+                                <b>Further Notes:</b>
+
+                                <ul>
+                                    <li>
+                                        All free-1 projects run on a single crowded
+                                        pool of computers, whereas the share projects run on
+                                        their own completely separate pool of much
+                                        less crowded computers.
+                                    </li>
+
+                                </ul>
+
+
+                            </div>
                         </div>
+
+
                     </div>
-
-                    <br><br>
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">Pricing for each plan</h3>
-                        </div>
-
-                        <div class="panel-body">
-
-                            <table class="table table-bordered table-hover">
-                                <tr>
-                                    <th>Price</th>
-                                    <th style="width:10em">Project type</th>
-                                    <th>Commercial use<sup>1</sup></th>
-                                    <th>Network access<sup>2</sup></th>
-                                    <th>Idle timeout<sup>3</sup></th>
-                                    <th>Disk space<sup>4</sup></th>
-                                    <th>CPU<sup>5</sup></th>
-                                    <th>Memory<sup>6</sup></th>
-                                    <th class="hide">Backup interval<sup>7</sup></th>
-                                </tr>
-                                <tr>
-                                    <td colspan=9>
-                                    </td>
-                                </tr>
-                                <tr class="success">
-                                    <td colspan=9>
-                                        A <strong>standard</strong>
-                                        project runs
-                                        <em><strong>much more quickly</strong></em>,
-                                        and you may use it
-                                        commercially.
-                                    </td>
-                                </tr>
-                                <tr class="success">
-                                    <td style="padding-top: 0px;"><font size=5><strong>$10/month</strong></font></td>
-                                    <td>standard-1</td>
-                                    <td>Yes</td>
-                                    <td>Yes</td>
-                                    <td>1 day</td>
-                                    <td>5GB SSD</td>
-                                    <td>1 Intel Xeon</td>
-                                    <td>2GB RAM</td>
-                                    <td class="hide">10 minutes</td>
-                                </tr>
-                                <tr>
-                                    <td colspan=9>
-                                    </td>
-                                </tr>
-                                <tr class="warning">
-                                    <td colspan=9>
-                                        A <strong>free</strong> project lets you evaluate the service and use
-                                        it for academic or non-commercial purposes.</td>
-                                </tr>
-                                <tr class="warning">
-                                    <td  style="padding-top: 0px;"><font size=5><strong>$0/month</strong></font></td>
-                                    <td>free-1</td>
-                                    <td>No</td>
-                                    <td>No</td>
-                                    <td>1 hour</td>
-                                    <td>3GB SSD</td>
-                                    <td>1 Opteron</td>
-                                    <td>2GB RAM</td>
-                                    <td class="hide">10 minutes</td>
-                                </tr>
-                                <tr class="info hide">
-                                    <td colspan=9>
-                                        A <strong>dedicated</strong>
-                                        project allow you to run  any
-                                        number of your projects
-                                        on a machine dedicated only
-                                        to them.
-                                    </td>
-                                </tr>
-
-                            </table>
-
-
-                            <ol style="color: #444;">
-                                <li><strong>Commercial use:</strong> free-1 projects may only be used for academic and non-commercial use.</li>
-
-                                <li><strong>Network access:</strong>
-                                    Access from your project to the outside Internet, so you can pull files from external data sources easily.
-                                </li>
-                                <li><b>Idle timeout:</b>
-                                    Your project will stop running if no files are edited for this amount of time.
-                                    The project could also stop if the underlying machine crashes due to excessive use,
-                                    or the machine is rebooted for maintenance.
-                                </li>
-                                <li><b>Disk space:</b>
-                                    The total mount of disk space that your project may use.  This does not count snapshots and other backups.
-                                </li>
-                                <li><b>Speed:</b>
-                                    The Opteron processors are significantly slower than the Xeon's (often a factor of 2).  Shared processors may be shared
-                                    with other users, so you are not guaranteed to always get the full speed.
-
-
-                                </li>
-                                <li><b>Memory:</b>
-                                    The total amount of memory (RAM) that your project may use.  Shared memory is shared
-                                    with other users, so you are not guaranteed to always get the full amount
-                                    of memory.
-                                </li>
-                                <li  class="hide"><b>Backups:</b>
-                                    Browsable snapshots of all files in your project are saved periodically.
-                                </li>
-
-                            </ol>
-                        </div>
-
-                        <div class="panel-footer hide">
-                            <b>Further Notes:</b>
-
-                            <ul>
-                                <li>
-                                    All free-1 projects run on a single crowded
-                                    pool of computers, whereas the share projects run on
-                                    their own completely separate pool of much
-                                    less crowded computers.
-                                </li>
-
-                            </ul>
-
-
-                        </div>
-                    </div>
-
-
                 </div>
+
             </div>
 
             <hr>
