--- a/salvus/static/policies/pricing.html
+++ b/salvus/static/policies/pricing.html
@@ -17,7 +17,7 @@
                 <h1>
                     <a href="http://www.sagemath.com" target="_blank">SageMath, Inc.</a></h1>
                 <h2>
-                    SageMath, Inc. Pricing (April 15, 2015)
+                    SageMath, Inc. Pricing (May 8, 2015)
                 </h2>
                 <a class="btn btn-default" href="index.html" role="button">&laquo; Other Policies</a>
             </div>
@@ -50,8 +50,7 @@
                                 SMC grows with you! The following upgrade allow you to increase the
                                 <em><strong>storage space</strong></em> for your files, the <em><strong>computational power and memory</strong></em> for
                                 your calculations, give your project
-                                <em><strong>network access</strong></em>,
-                                and <strong><em>remove restrictions</em></strong> on non-commercial/non-academic use.
+                                <em><strong>network access</strong></em>
                             </div>
                             <div class="col-md-5 col-sm-offset-2">
                                 By upgrading one of your projects to a paid monthly plan, your files
@@ -115,8 +114,7 @@
                                     </tr>
                                     <tr class="warning">
                                         <td colspan=9>
-                                            A <strong>free</strong> project lets you evaluate the service and use
-                                            it for academic or non-commercial purposes.</td>
+                                            A <strong>free</strong> project lets you evaluate the service</td>
                                     </tr>
                                     <tr class="warning">
                                         <td  style="padding-top: 0px;"><font size=5><strong>$0/month</strong></font></td>
@@ -143,7 +141,7 @@
 
 
                                 <ol style="color: #444;">
-                                    <li><strong>Commercial use:</strong> free-1 projects may only be used for academic and non-commercial use.</li>
+                                    <li><strong>Commercial use:</strong> </li>
 
                                     <li><strong>Network access:</strong>
                                         Access from your project to the outside Internet, so you can pull files from external data sources easily.
