Correct some typos in magics docstrings, etc.

--- a/salvus/static/policies/index.html
+++ b/salvus/static/policies/index.html
@@ -37,7 +37,7 @@
                 <div class="col-md-3">
                     <h2>Privacy</h2>
                     <p>
-                        This explains how SageMath, Inc.'s
+                        This explains how SageMath, Inc.
                         seeks to respect the privacy of its
                         users.
                     </p>
@@ -49,7 +49,7 @@
                         This explains how SageMath, Inc.
                         respects copyright policies,
                         and seeks to provide a site that does not
-                        infringe on others copyright.
+                        infringe on others' copyright.
                     </p>
                     <p><a class="btn btn-default" href="copyright.html" role="button">View details &raquo;</a></p>
                 </div>
