improve pages that explain our subscriptions

--- a/salvus/static/policies/copyright.html
+++ b/salvus/static/policies/copyright.html
@@ -10,7 +10,7 @@
         <link href="/static/bootstrap-3.3.0/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
-        <a target="_blank" class="pull-right" style="text-align:center" href="https://cloud.sagemath.com"><img  src="/static/favicon-96.png"><br>
+        <a target="_blank" class="pull-right" style="text-align:center" href="https://cloud.sagemath.com"><img  src="/static/favicon-96.png"  class="img-rounded"><br>
             SageMathCloud</a>
         <div class="jumbotron">
             <div class="container">
