--- a/salvus/static/policies/terms.html
+++ b/salvus/static/policies/terms.html
@@ -14,7 +14,7 @@
         </style>
     </head>
     <body>
-        <a target="_blank" class="pull-right" style="text-align:center" href="https://cloud.sagemath.com"><img  src="/static/favicon-96.png"><br>
+        <a target="_blank" class="pull-right" style="text-align:center" href="https://cloud.sagemath.com"><img  src="/static/favicon-96.png"  class="img-rounded"><br>
         SageMathCloud</a>
         <div class="jumbotron">
             <div class="container">
