ensure updating primus-engine works; also don't include primus.js and primus.min.js in our repo for no apparent reason.

--- a/salvus/static/index.html
+++ b/salvus/static/index.html
@@ -10,7 +10,7 @@
         <meta name="author" content="William Stein">
 
         <!-- Primus: websockets -->
-        <script type="text/javascript" src="/static/primus/primus-engine.min.js?version=1424357058"></script>
+        <script type="text/javascript" src="/static/primus/primus-engine.min.js"></script>
 
         <script type="text/javascript" src="/static/jquery/jquery.min.js"></script>
 
