--- a/salvus/smc-webapp/top_navbar.html
+++ b/salvus/smc-webapp/top_navbar.html
@@ -24,7 +24,7 @@ SageMathCloud: A collaborative web-based interface to Sage, IPython, LaTex and t
 <div class="navbar navbar-fixed-top salvus-top_navbar navbar-default">
     <span class="visible-xs"><span class="navbar-brand"><i class="fa fa-cloud"> </i> SageMathCloud</span></span>
 
-    <div class="salvus_client_warning salvus_client_version_warning hide" style="margin-top:1em"><i class="fa fa-refresh"> </i> New Version Available: upgrade by <a href="/" style="color: white; font-weight: bold;">refreshing this page</a> <span class="hidden-xs">while holding the shift key</span> <i class="fa fa-times"> </i> </div>
+    <div class="salvus_client_warning salvus_client_version_warning hide" style="margin-top:1em"><i class="fa fa-refresh"> </i> New Version Available: upgrade by <a href="/" style="color: white; font-weight: bold;">refreshing this page</a> <i class="fa fa-times pull-right"> </i> </div>
 
 <div class="salvus_client_warning smc-cookie-warning hide" style="margin-top:1em"><i class="fa fa-warning"> </i> You <em><strong>must</strong></em> enables cookies to use SageMathCloud.</div>
 
