react router testing

--- a/salvus/static/router.html
+++ b/salvus/static/router.html
@@ -9,6 +9,8 @@
         <meta name="description" content="SageMathCloud">
         <meta name="author" content="William Stein">
 
+        <link href="/static/bootstrap-3.3.0/css/bootstrap.min.css" rel="stylesheet">
+
         <!-- Primus: websockets -->
         <script type="text/javascript" src="/static/primus/primus-engine.min.js"></script>
 
@@ -19,6 +21,9 @@
 
         <!-- start connecting to the backend-->
         <script type="text/javascript" src="/static/webpack/client.js"></script>
+
+        <!-- Bootstrap -->
+        <script type="text/javascript" src="/static/bootstrap-3.3.0/js/bootstrap.min.js"></script>
 
     </head>
     <body>
