sagews: address worksheet robustness issues

--- a/salvus/smc-webapp/editor.html
+++ b/salvus/smc-webapp/editor.html
@@ -466,11 +466,11 @@ Editor for files in a project
         <div class="salvus-editor-history-history_editor"></div>
     </div>
 
-    <div class="sagews-input">
+    <span class="sagews-input">
         <span class="sagews-input-hr sagews-input-eval-state"></span>
         <span class="sagews-input-hr sagews-input-run-state"></span>
         <span class="sagews-input-hr sagews-input-newcell"></span>
-    </div>
+    </span>
 
     <div class="sagews-output">
         <div class="sagews-output-container">
@@ -478,7 +478,7 @@ Editor for files in a project
                 <div class="sagews-output-editor-content">
                 </div>
             </div>
-             <span class="sagews-output-messages"></span>
+             <div class="sagews-output-messages"></div>
         </div>
     </div>
 
