--- a/salvus/smc-webapp/editor.html
+++ b/salvus/smc-webapp/editor.html
@@ -93,12 +93,9 @@ Editor for files in a project
                     <span class="salvus-editor-codemirror-worksheet-buttons hide">
                         <span class="btn-group salvus-editor-write-only">
                             <a href="#execute" class="btn btn-success" data-toggle="tooltip" data-placement="bottom" title="Execute current or selected cells."><i class="fa fa-play"></i> &nbsp;<span class="hidden-sm">Run</span></a>
-                            <a href="#interrupt" class="btn btn-warning" data-toggle="tooltip" data-placement="bottom" title="Interrupt the running Sage process."><i class="fa fa-stop"></i> <span class="hidden-sm">Stop</span></a>
-                            <a href="#kill" class="btn btn-warning" data-toggle="tooltip" data-placement="bottom" title="Restart the running Sage process."><i class="fa fa-refresh"></i> <span class="hidden-sm">Restart</span></a>
+                            <a href="#interrupt" class="btn btn-warning" data-toggle="tooltip" data-placement="bottom" title="Stop the running calculation."><i class="fa fa-stop"></i> <span class="hidden-sm">Stop</span></a>
+                            <a href="#kill" class="btn btn-danger" data-toggle="tooltip" data-placement="bottom" title="Restart the running Sage process (all variables reset; fixes any problem)."><i class="fa fa-refresh"></i> <span class="hidden-sm">Restart</span></a>
                             <a href="#tab" class="btn btn-info"  data-toggle="tooltip" data-placement="bottom" title="Tab completion."> <i class="fa fa-step-forward"></i><span class="hidden-sm"> Tab</span></a>
-                            <a href="#new-html" class="hide btn btn-default"  data-toggle="tooltip" data-placement="bottom" title="Insert a new text cell."> <i class="fa fa-paragraph"></i>
-                                <span class="hidden-sm">Text</span>
-                            </a>
 
                         </span>
                         <span class="btn-group salvus-editor-write-only">
