--- a/src/smc-webapp/editor.html
+++ b/src/smc-webapp/editor.html
@@ -469,15 +469,11 @@ Editor for files in a project
         <span class="sagews-input-hr sagews-input-newcell"></span>
     </span>
 
-    <div class="sagews-output">
-        <div class="sagews-output-container">
-            <div class="sagews-output-editor hide">
-                <div class="sagews-output-editor-content">
-                </div>
-            </div>
-             <div class="sagews-output-messages"></div>
-        </div>
-    </div>
+    <span class="sagews-output">
+        <span class="sagews-output-container">
+             <span class="sagews-output-messages"></span>
+        </span>
+    </span>
 
     <div class="salvus-ipython-notebook">
         <!--<h3 style="margin-left:1em">IPython Notebook: <span class="salvus-ipython-filename"></span></h3>-->
