base url in various places: with proper configuration this now fully works (except for running projects)

--- a/src/static/router.html
+++ b/src/static/router.html
@@ -9,25 +9,25 @@
         <meta name="description" content="SageMathCloud">
         <meta name="author" content="William Stein">
 
-        <link href="/static/bootstrap-3.3.0/css/bootstrap.min.css" rel="stylesheet">
+        <link href="bootstrap-3.3.0/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Primus: websockets -->
-        <script type="text/javascript" src="/static/primus/primus-engine.min.js"></script>
+        <script type="text/javascript" src="primus/primus-engine.min.js"></script>
 
-        <script type="text/javascript" src="/static/jquery/jquery.min.js"></script>
+        <script type="text/javascript" src="jquery/jquery.min.js"></script>
 
         <!-- load stable vendor-supplied third party libraries, which are unlikely to change -->
-        <script type="text/javascript" src="/static/webpack/vendors.js"></script>
+        <script type="text/javascript" src="webpack/vendors.js"></script>
 
         <!-- start connecting to the backend-->
-        <script type="text/javascript" src="/static/webpack/client.js"></script>
+        <script type="text/javascript" src="webpack/client.js"></script>
 
         <!-- Bootstrap -->
-        <script type="text/javascript" src="/static/bootstrap-3.3.0/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="bootstrap-3.3.0/js/bootstrap.min.js"></script>
 
     </head>
     <body>
         <!-- load webpack'ed app code (most of page/*); -->
-        <script type="text/javascript" src="/static/webpack/router.js"></script>
+        <script type="text/javascript" src="webpack/router.js"></script>
     </body>
 </html>
