reorganization and further documentation of development scripts; fixing various webapp paths when testing under OS X laptop

--- a/src/smc-webapp/account.html
+++ b/src/smc-webapp/account.html
@@ -67,7 +67,7 @@
 
     <div class="row hide" id="account-sign_in" style="margin-top:2em">
         <div class="col-sm-6">
-            <img src="/favicon-128.png" width="64" height="64" class="img img-rounded">
+            <img src="/static/favicon-128.png" width="64" height="64" class="img img-rounded">
             <h2>Welcome back to <span class="smc-site-name">SageMathCloud</span>!</h2>
         </div>
         <div class="well col-sm-6">
@@ -194,7 +194,7 @@
 
         <div class="col-sm-5 col-sm-offset-1">
             <!-- NOTE: not using mathjax on purpose here, since don't want landing page to update after load, which looks lame. -->
-            <img src="/favicon-128.png" width="64" height="64" class="img img-rounded pull-right">
+            <img src="/static/favicon-128.png" width="64" height="64" class="img img-rounded pull-right">
             <h3><span class="smc-site-name">SageMathCloud</span>: <span class="smc-site-description">collaborative computational mathematics</span></h3>
             <br>
             <h4>
@@ -282,5 +282,3 @@
         </div>
     </div>
 </div>
-
-
