--- a/src/static/index.html
+++ b/src/static/index.html
@@ -40,30 +40,30 @@
 
         <!-- ****** faviconit.com favicons ****** -->
         <!-- Basic favicons -->
-        <link rel="shortcut icon" sizes="16x16 32x32 48x48 64x64" href="/favicon.ico">
-        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-        <!--[if IE]><link rel="shortcut icon" href="/favicon.ico"><![endif]-->
+        <link rel="shortcut icon" sizes="16x16 32x32 48x48 64x64" href="/static/favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico">
+        <!--[if IE]><link rel="shortcut icon" href="/static/favicon.ico"><![endif]-->
         <!-- For Opera Speed Dial: -->
-        <link rel="icon" type="image/png" sizes="195x195" href="/favicon-195.png">
+        <link rel="icon" type="image/png" sizes="195x195" href="/static/favicon-195.png">
         <!-- For iPad with high-resolution Retina display running iOS ≥ 7: -->
-        <link rel="apple-touch-icon" sizes="152x152" href="/favicon-152.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/static/favicon-152.png">
         <!-- For iPad with high-resolution Retina display running iOS ≤ 6: -->
-        <link rel="apple-touch-icon" sizes="144x144" href="/favicon-144.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/static/favicon-144.png">
         <!-- For iPhone with high-resolution Retina display running iOS ≥ 7: -->
-        <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/static/favicon-120.png">
         <!-- For iPhone with high-resolution Retina display running iOS ≤ 6: -->
-        <link rel="apple-touch-icon" sizes="114x114" href="/favicon-114.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/static/favicon-114.png">
         <!-- For Google TV devices: -->
-        <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/static/favicon-96.png">
         <!-- For iPad Mini: -->
-        <link rel="apple-touch-icon" sizes="76x76" href="/favicon-76.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/static/favicon-76.png">
         <!-- For first- and second-generation iPad: -->
-        <link rel="apple-touch-icon" sizes="72x72" href="/favicon-72.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/static/favicon-72.png">
         <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
         <link rel="apple-touch-icon" href="favicon-57.png">
         <!-- Windows 8 Tiles -->
         <meta name="msapplication-TileColor" content="#FFFFFF">
-        <meta name="msapplication-TileImage" content="/favicon-144.png">
+        <meta name="msapplication-TileImage" content="/static/favicon-144.png">
         <!-- ****** faviconit.com favicons ****** -->
 
         <!-- Hack to make jQuery UI work on mobile devices: http://touchpunch.furf.com/ -->
