--- a/src/smc-webapp/account.html
+++ b/src/smc-webapp/account.html
@@ -38,52 +38,5 @@
     </div>
 </div>
 
-<div class="container-fluid constrained hide" id="account" style="padding-top: 1em; margin-left:auto; margin-right:auto">
-    <div id="smc-react-landing">
-    </div>
-    <div class="row hide" id="account-settings">
-
-        <ul class="nav nav-tabs">
-            <li class="active">
-                <a href="#account-settings-tab" data-toggle="tab">
-                <i class="fa fa-cog"></i> Settings</a>
-            </li>
-            <li>
-                <a href="#smc-billing-tab" id="billing-tab-button" data-toggle="tab" aria-controls="billing-tab">
-                    <i class="fa fa-credit-card"></i> Billing
-                    <i class="fa fa-refresh smc-billing-tab-refresh-spinner hide" style="margin-left: 1em; cursor:pointer; color:#428bca;"> </i>
-                </a>
-            </li>
-            <li>
-                <a href="#smc-upgrades-tab" id="upgrades-tab-button" data-toggle="tab" aria-controls="upgrades-tab">
-                    <i class="fa fa-arrow-circle-up"></i> Upgrades
-                    <i class="fa fa-refresh smc-upgrades-tab-refresh-spinner hide" style="margin-left: 1em; cursor:pointer; color:#428bca;"> </i>
-                </a>
-            </li>
-        </ul>
-
-        <div class="tab-content">
-            <div class="tab-pane active" id="account-settings-tab" style="height: 1000px; margin: 1em;">
-                <div id="r_account">
-                    Loading account settings...
-                </div>
-            </div>
-            <!-- style is a hack to ensure there is a scrollbar -->
-            <div class="tab-pane" id="smc-billing-tab" aria-labelledBy="billing-tab-button" style="height: 1000px; margin: 1em;">
-                <div class="smc-react-billing">
-                    Loading billing information...
-                </div>
-            </div>
-            <div class="tab-pane" id="smc-upgrades-tab" aria-labelledBy="upgrades-tab-button" style="height: 1000px; margin: 1em;">
-                <div class="smc-react-upgrades">
-                    Loading upgrades information...
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-
-
-
+<div id="account">
 </div>
